2007-03-11  Fred Kiefer <FredKiefer@gmx.de>

	* Source/NSApplication.m (-abortModal): Call stopModalWithCode: to
	make this mehtod work when not inside the modal loop.
	* Source/GSToolbarView.m (-_takeInAccountFlexibleSpaces): Don't
	call methods that return astructures on nil as this fails on Solaris.
	* Source/NSTableColumn.m (-setWidth:): Add self tothe
	notifiaction.
	* Source/NSComboBoxCell.m (-_selectCompleted): Don't change
	selection if no match is found.
	* Source/NSMenuItemCell.m (-drawImageWithFrame:inView:): Use
	[drawImage:withFrame:inView:] to do the drawing.  
	Patches by Andreas Höschler <ahoesch@smartsoft.de>.

2007-03-09  Nicola Pero <nicola.pero@meta-innovation.com>

	Updated gnustep-gui to use versioned library resources.
	* Source/NSApplication.m ([+initialize]): Use
	bundleForLibrary:version: to get the correct version of the
	gnustep-gui resources.
	* Source/GNUmakefile: Install resources in versioned directory.
	* Resources/GNUmakefile: Same change.
	* Panels/GNUmakefile.postamble: Same change.
	
2007-03-09  Sergii Stoian <stoyan255@yahoo.com>

        * Source/GSSlideView.m: (- _slideFrom:to:): Calcuate number of
        steps wrt image size.
        * Source/GSDragView.m: (- slideDraggedImageTo:): Ditto.
	
2007-03-08  Fred Kiefer <FredKiefer@gmx.de>

	* Headers/AppKit/NSResponder.h: Move _rFlags from here ...
	* Headers/AppKit/NSView.h: ... to here.
	* Headers/AppKit/NSWindow.h: Add views_need_display
	* Source/NSWindow.m: Use _f.views_need_display instead of _rFlags.

2007-03-08  Fred Kiefer <FredKiefer@gmx.de>

	* Source/NSImage.m (-TIFFRepresentation,
	-TIFFRepresentationUsingCompression:factor:): If there is no
	bitmap representation create one and store it. 
	Idea by Renaud Molla <renaud.molla@wanadoo.fr>.

2007-03-08  Fred Kiefer <FredKiefer@gmx.de>

	* Source/NSDocument.m
	(-fileNameFromRunningSavePanelForSaveOperation:): Add remaining
	change by Wolfgang Lux.  This corrects a potential mismatch